Remove deprecated references